--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
-<html>
-  <head>
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Test!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Tetris Oyunu</title>
+</head>
+<body>
+    <div class="container">
+        <canvas width="320" height="640" id="game">
+        </canvas>
+        <div class="sidebar">
+            <h1>Puan</h1>
+            <div id="score">0</div>
+            <div class="buttons">
+                <button id="button1" onclick="gameStart()" >Başla</button>
+                <button id="button2">Skoru Kaydet</button>
+            </div>
+            <div id="form">
+                <input type="text" placeholder="Adiniz">
+                <button>Kaydet</button>
+            </div>
+            <div class="scoreboard">
+                <h3>SKORBOARD</h3>
+                <div class="scores">
+                    <font>Berat</font>
+                    <font>500</font>
+            </div>
+        </div>
+    </div>
+    <script src="scripts.js"></script> 
+</body>
 </html>
