--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <button id="button2">Skoru Kaydet</button>
             </div>
             <div id="form">
-                <input type="text" placeholder="Adiniz">
-                <button>Kaydet</button>
+                <input id="username" type="text" placeholder="Adiniz">
+                <button id="button3">Kaydet</button>
             </div>
             <div class="scoreboard">
                 <h3>SKORBOARD</h3>
